added new methods to interface

--- a/SampleSOAGithub/Views/Random/Index.cshtml
+++ b/SampleSOAGithub/Views/Random/Index.cshtml
@@ -4,10 +4,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@model int
+@model SampleSOAGithub.Models.RandomInteger;
 
-<h2>Random Integer</h2>
 
-<h3>@Model</h3>
+<h3>Random Integer: @Model.RandomInt</h3>
+
+<h3>Max Random Integer: @Model.RandomMax</h3>
+
+<h3>@*Array Random Integer: @Model.*@</h3>
+
+
 
 
