--- a/SampleSOAGithub/Views/Random/Index.cshtml
+++ b/SampleSOAGithub/Views/Random/Index.cshtml
@@ -11,10 +11,13 @@
 
 <h3>Max Random Integer: @Model.RandomMax</h3>
 
-@foreach (var value in @Model.Buffer) {
+@*@foreach (var value in @Model.Buffer) {
 
-    <h3>Array Random Integers: @value  </h3>
-}
+    if (value != 0)
+    {
+        <h3>Array Random Integers: @value  </h3>
+    }
+}*@
 
 
 
