--- a/SampleSOAGithub/Views/Random/Index.cshtml
+++ b/SampleSOAGithub/Views/Random/Index.cshtml
@@ -9,17 +9,25 @@
 
 <h3>Random Integer: @Model.RandomInt</h3>
 
-<h3>Max Random Integer: @Model.RandomMax</h3>
+@*<h3>Max Random Integer: @Model.RandomMax</h3>*@
 
-@*@foreach (var value in @Model.Buffer) {
+@*<table>
+    <tr>
+        <td>
+            <input id="number" type="text"/>
+        </td>
+    </tr>
+</table>*@
 
-    if (value != 0)
-    {
-        <h3>Array Random Integers: @value  </h3>
-    }
+@*@section scripts{ 
+<script>
+    $(document).ready(function () {
+        var number = $("#number").text();
+        console.log(number);
+    });
+
+    </script>
 }*@
-
-
 
 
 
